feat: register all api endpoints
